# tron2-docker

./: ._robot-description  .gitignore  Dockerfile  README.md  build.sh  deploy.sh  docker_run.sh  entry.sh  start_services.sh
robot-description/: .gitignore  CMakeLists.txt  README.md  package.xml
robot-description/tron2/DACH_TRON2A/meshes/: base_2_Link.STL  elbow_L_Link.STL  elbow_R_Link.STL  head_base_Link.STL  head_pitch_Link.STL  head_yaw_Link.STL  proximal_pitch_L_Link.STL  proximal_pitch_R_Link.STL  proximal_roll_L_Link.STL  proximal_roll_R_Link.STL  proximal_yaw_L_Link.STL  proximal_yaw_R_Link.STL  proximal_yaw_R_Link_collision.STL  wrist_pitch_L_Link.STL  wrist_pitch_R_Link.STL  wrist_roll_L_Link.STL  wrist_roll_L_Link_collision.STL  wrist_roll_R_Link.STL  wrist_yaw_L_Link.STL  wrist_yaw_R_Link.STL
robot-description/tron2/DACH_TRON2A/urdf/: robot.urdf  robot_grasper.urdf  robot_rl.urdf  robot_zeromass_graser.urdf
robot-description/tron2/DACH_TRON2A/xacro/: macros.xacro  robot.urdf.xacro
robot-description/tron2/DACH_TRON2A/xml/: robot.xml  robot_grasper.xml
robot-description/tron2/DA_TRON2A/meshes/: proximal_yaw_L_Link_collision.STL  wrist_roll_R_Link_collision.STL
robot-description/tron2/DA_TRON2A/urdf/: robot.urdf  robot_rl.urdf
robot-description/tron2/DA_TRON2A/xacro/: macros.xacro  robot.urdf.xacro
robot-description/tron2/DA_TRON2A/xml/: robot.xml
robot-description/tron2/SFYG_TRON2A/meshes/: ankle_pitch_L_Link.STL  antenna_R_Link_collision1.STL  arm2_Link_collision1.STL  arm3_Link_collision1.STL  arm3_Link_collision2.STL  arm4_Link_collision2.STL  camera_mount_Link_collision.STL  gripper_base_Link_collision2.STL  knee_L_Link.STL  proximal_yaw_L_Link.STL  proximal_yaw_R_Link.STL
robot-description/tron2/SFYG_TRON2A/urdf/: robot.urdf  robot_rl.urdf
robot-description/tron2/SFYG_TRON2A/usd/: robot.usd
robot-description/tron2/SFYG_TRON2A/xacro/: macros.xacro  robot.urdf.xacro
robot-description/tron2/SFYG_TRON2A/xml/: robot.xml
robot-description/tron2/SF_TRON2A/meshes/: ankle_pitch_R_Link.STL  knee_R_Link.STL  proximal_pitch_L_Link.STL  proximal_pitch_R_Link.STL  proximal_roll_L_Link.STL  proximal_roll_R_Link.STL  rack.stl
robot-description/tron2/SF_TRON2A/urdf/: robot.urdf  robot_rl.urdf
robot-description/tron2/SF_TRON2A/xacro/: macros.xacro  robot.urdf.xacro
robot-description/tron2/SF_TRON2A/xml/: robot.xml
robot-description/tron2/WFYG_TRON2A/meshes/: antenna_L_Link.STL  antenna_L_Link_collision1.STL  antenna_L_Link_collision2.STL  antenna_R_Link.STL  antenna_R_Link_collision2.STL  arm2_Link.STL  arm2_Link_collision2.STL  arm3_Link.STL  arm4_Link_collision1.STL  camera_mount_Link.STL  radar_Link.STL  (+9 more)
robot_common/: package.xml
tron2_controllers/: CMakeLists.txt  package.xml
tron2_controllers/config/SF_TRON2A/: controllers.yaml  params.yaml
tron2_controllers/config/SF_TRON2A/policy/: encoder.onnx  policy.onnx
tron2_controllers/config/WF_TRON2A/: controllers.yaml
tron2_controllers/config/WF_TRON2A/policy/: encoder.onnx
tron2_controllers/include/tron2_controllers/: ControllerBase.h  WheelfootController.h
tron2_controllers/src/: ControllerBase.cpp  SolefootController.cpp  WheelfootController.cpp
tron2_gazebo/: CMakeLists.txt
tron2_gazebo/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common.yaml  nav.rviz  tron2_cfg.yaml
tron2_gazebo/launch/: empty_world.launch  nav_sim.launch  slam_sim.launch
tron2_gazebo/scripts/: ground_truth_odom.py  joy_to_cmdvel.py  web_walk.py
tron2_gazebo/worlds/: office.world
tron2_hw/: CMakeLists.txt
tron2_hw/config/: tron2_hw.yaml
tron2_hw/launch/: tron2_controller_sim.launch  tron2_hw_sim.launch
tron2_hw/src/: RobotHWLoop.cpp  Tron2HW.cpp  tron2_hw_node.cpp
tron2_rl_deploy_python/: README.md  main.py
tron2_rl_deploy_python/controllers/: SolefootController.py  WheelfootController.py  __init__.py
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/: README.md
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/robot_common/: CMakeLists.txt
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_controllers/: CMakeLists.txt  tron2_controllers_plugins.xml
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_controllers/config/: controllers.yaml
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_controllers/config/SF_TRON2A/policy/: encoder.onnx
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_controllers/config/WF_TRON2A/: params.yaml
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_controllers/config/WF_TRON2A/policy/: policy.onnx
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_controllers/include/tron2_controllers/: SolefootController.h
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_controllers/src/: ControllerBase.cpp
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_hw/: CMakeLists.txt  package.xml
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_hw/config/: joystick.yaml
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_hw/docs/: bringup_mvp.md
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_hw/include/tron2_hw/: RobotData.h  RobotHWLoop.h  Tron2HW.h
tron2_rl_deploy_ros-master/tron2_rl_deploy_ros-master/tron2_hw/launch/: tron2_hw.launch  tron2_hw_sim.launch
tron2_rl_lab-main/: .gitignore  README.md
tron2_rl_lab-main/scripts/rsl_rl/: play.py  train.py
(+82 files in other folders)
