<?xml version="1.0"?>
<package format="2">
  <name>tron2_hw</name>
  <version>0.0.1</version>
  <description>TRON2 real-hardware interface package for ros_control deployment.</description>

  <maintainer email="dev@example.com">developer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>robot_common</depend>
  <depend>realtime_tools</depend>
  <depend>urdf</depend>
  <depend>limxsdk_lowlevel</depend>
</package>
